crates/telemetry-adapters/tests/snapshots/snapshots_sim_racing__gran_turismo_7_race_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_sim_racing.rs
expression: normalized
---
speed_ms: 47.2
steering_angle: 0
throttle: 0.8
brake: 0
clutch: 0
rpm: 6200
max_rpm: 7800
gear: 4
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 78
  - 81
  - 75
  - 77
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: true
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: gt7_1234
position: 0
lap: 3
current_lap_time_s: 0
best_lap_time_s: 92.34
last_lap_time_s: 93.1
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.46153846
engine_temp_c: 91
sequence: 0
