crates/telemetry-adapters/tests/snapshots/snapshots_sim_racing__pcars2_race_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_sim_racing.rs
expression: normalized
---
speed_ms: 52.8
steering_angle: 0.15748031
throttle: 0.7490196
brake: 0.14901961
clutch: 0
rpm: 7200
max_rpm: 8500
gear: 5
num_gears: 6
lateral_g: 1.200206
longitudinal_g: 0.49966094
vertical_g: 1.0003417
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 88
  - 91
  - 85
  - 87
tire_pressures_psi:
  - 24.946535
  - 25.23661
  - 24.366383
  - 24.65646
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: true
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.62
engine_temp_c: 92
extended:
  boost_amount:
    type: Integer
    value: 12
  crash_state:
    type: Integer
    value: 0
  fuel_capacity:
    type: Integer
    value: 110
  fuel_pressure_kpa:
    type: Integer
    value: 350
  odometer_km:
    type: Float
    value: 245.7
  oil_pressure_kpa:
    type: Integer
    value: 380
  oil_temp_c:
    type: Integer
    value: 115
  water_pressure_kpa:
    type: Integer
    value: 140
sequence: 0
