crates/telemetry-adapters/tests/snapshots/snapshots_sim_racing__raceroom_race_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_sim_racing.rs
expression: normalized
---
speed_ms: 45.8
steering_angle: 0.35
throttle: 0.2
brake: 0.65
clutch: 0
rpm: 6500
max_rpm: 8000
gear: 4
num_gears: 6
lateral_g: -0.86675876
longitudinal_g: -0.6118297
vertical_g: 1.0003417
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 89
  - 93
  - 86
  - 90
tire_pressures_psi:
  - 24.801455
  - 25.09153
  - 24.511377
  - 24.656416
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: true
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: true
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 3
lap: 6
current_lap_time_s: 55.2
best_lap_time_s: 51.8
last_lap_time_s: 52.3
delta_ahead_s: 1.5
delta_behind_s: 0.7
fuel_percent: 0.41666666
engine_temp_c: 97
extended:
  fuel_capacity_l:
    type: Float
    value: 60
  fuel_left_l:
    type: Float
    value: 25
sequence: 0
